<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.neu.madcourse.rachit.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/about"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/about">

            </Button>

            <Button
                android:id="@+id/tictactoe"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/tictactoe">

            </Button>

            <Button
                android:id="@+id/dictionary"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/dictionary">
            </Button>

            <Button
                android:id="@+id/wordgame"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/wordgame"/>

            <Button
                android:id="@+id/communication"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/communication"/>

            <Button
                android:id="@+id/twoplayer"
                android:layout_width="170dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/twoplayerwordgame"/>

            <Button
                android:id="@+id/finalProject"
                android:layout_width="170dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:text="@string/finalProject"/>

            <Button
                android:id="@+id/error"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/error">

            </Button>

            <Button
                android:id="@+id/quit"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/quit">

            </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
