<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.neu.madcourse.wordgame.GameActivity">

    <Button
        android:id="@+id/continuegame"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:text="@string/continuegame"/>

    <Button
        android:id="@+id/startnewgame"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/startnewgame"/>

    <Button
        android:id="@+id/wordgame_instructions"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/instructions"/>

    <Button
        android:id="@+id/wordgame_acknowledgement"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="@string/acknowledgement"/>

    <Button
        android:id="@+id/wordgame_quit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/quit"/>


</LinearLayout>
