<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.neu.madcourse.twoplayer.MainActivity">

    <LinearLayout
        android:id="@+id/two_player_register_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:stretchColumns="*">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="end|center"
                    android:textSize="20sp"
                    android:layout_marginTop="6dp"
                    android:text="Username - "/>


                <EditText
                    android:id="@+id/two_player_username"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="enter your name ..."
                    android:inputType="text"
                    android:textColorHint="#238745"
                    android:textSize="16sp" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/two_player_unique_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:textColor="@color/red_color"
            android:text="@string/uniqueUsername"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/two_player_register"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="onClick"
            android:text="@string/register" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two_player_main_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/two_player_resumegame"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:onClick="onClick"
            android:text="@string/continuegame" />

        <Button
            android:id="@+id/two_player_newgame"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/startnewgame" />

        <Button
            android:id="@+id/two_player_leaderboard"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/leaderboard"/>

        <Button
            android:id="@+id/two_player_acknowledgement"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/acknowledgement"/>

        <Button
            android:id="@+id/two_player_instructions"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/instructions"/>

        <Button
            android:id="@+id/two_player_unregister"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/unregister"/>
        
        <Button
            android:id="@+id/two_player_quitgame"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="onClick"
            android:text="@string/quit"/>

    </LinearLayout>

</LinearLayout>
