<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="edu.neu.madcourse.dictionary.WordActivity">

    <FrameLayout
        android:id="@+id/progressbarlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Loading Dictionary..."/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            style="?android:attr/progressBarStyleHorizontal" />

    </FrameLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview_dict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_word"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:layout_marginLeft="9dp"
                android:layout_gravity="center"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/hint_word"/>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/clear_button"/>

            <Button
                android:id="@+id/home_button_word_acitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/homebutton"/>

            <Button
                android:id="@+id/acknowledgement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/acknowledgement">

            </Button>

        </LinearLayout>

    </ScrollView>

    <ListView
        android:id="@+id/word_inside_listview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_weight="0.5"/>

</LinearLayout>
